[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/Arena.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=2]
[ext_resource path="res://Fonts/LiberationSans-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Score.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Macrophage.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/LevelTime.gd" type="Script" id=6]
[ext_resource path="res://Fonts/LiberationSans-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Scripts/BackButton.gd" type="Script" id=8]
[ext_resource path="res://Scripts/PauseButton.gd" type="Script" id=9]
[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=10]

[sub_resource type="ProceduralSky" id=1]
sky_top_color = Color( 0.168627, 0.0196078, 0.0196078, 1 )
sky_horizon_color = Color( 0.00784314, 0, 0, 1 )
sky_curve = 0.475023
ground_bottom_color = Color( 0.137255, 0.0196078, 0.0196078, 1 )
ground_horizon_color = Color( 0, 0, 0, 1 )
ground_curve = 0.735167
sun_color = Color( 0.0196078, 0, 0, 1 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 75
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 7 )

[sub_resource type="DynamicFont" id=11]
size = 28
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 11 )

[node name="Arena" type="Spatial"]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.052744, -0.342045, -0.0179791 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.955716, -0.173108, 0.237992, -0.0736497, 0.642274, 0.762928, -0.284926, -0.746671, 0.601082, 0, 4.87435, 6.39922 )
light_energy = 0.7
shadow_enabled = true
directional_shadow_blend_splits = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -215.0
margin_right = -15.0
margin_bottom = 66.0
theme = SubResource( 3 )
text = "Score: 0"
align = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelTime" type="Label" parent="Control"]
margin_left = 6.0
margin_right = 211.0
margin_bottom = 48.0
theme = SubResource( 3 )
text = "Timer: 2:00"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelTimer" type="Timer" parent="Control/LevelTime"]
wait_time = 120.0

[node name="LevelUp" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -42.0
margin_right = 128.0
margin_bottom = 42.0
theme = SubResource( 6 )
text = "Level 1"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoseTimer" type="Timer" parent="Control/LevelUp"]
wait_time = 2.0
one_shot = true

[node name="ShowTimer" type="Timer" parent="Control/LevelUp"]
wait_time = 2.0
one_shot = true

[node name="BackButton" type="Button" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 14.0
margin_top = 6.0
margin_right = 89.0
margin_bottom = 44.0
theme = SubResource( 10 )
text = "Menu"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="Button" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -106.5
margin_top = 6.0
margin_right = -13.5
margin_bottom = 44.0
theme = SubResource( 10 )
text = "Pause"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -42.0
margin_right = 196.0
margin_bottom = 42.0
theme = SubResource( 6 )
text = "Game Over"
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoseTimer" type="Timer" parent="Control/GameOver"]
wait_time = 2.0
one_shot = true

[connection signal="point_gain" from="." to="Control/Score" method="_on_Arena_point_gain"]
[connection signal="time_loss" from="." to="Control/LevelTime" method="_on_Arena_time_loss"]
[connection signal="level_up" from="Control/Score" to="." method="_on_Score_level_up"]
[connection signal="level_up" from="Control/Score" to="Player" method="_on_Score_level_up"]
[connection signal="level_up" from="Control/Score" to="Control/LevelTime" method="_on_Score_level_up"]
[connection signal="level_up" from="Control/Score" to="Control/LevelUp" method="_on_Score_level_up"]
[connection signal="lose" from="Control/LevelTime" to="Control/LevelUp" method="_on_LevelTime_lose"]
[connection signal="timeout" from="Control/LevelTime/LevelTimer" to="Player" method="_on_LevelTimer_timeout"]
[connection signal="timeout" from="Control/LevelTime/LevelTimer" to="Control/GameOver" method="_on_Game_Lost"]
[connection signal="timeout" from="Control/LevelUp/LoseTimer" to="Control/LevelUp" method="_on_LoseTimer_timeout"]
[connection signal="timeout" from="Control/LevelUp/ShowTimer" to="Control/LevelUp" method="_on_Timer_timeout"]
[connection signal="timeout" from="Control/GameOver/LoseTimer" to="Control/LevelTime" method="_on_LoseTimer_timeout"]
[connection signal="timeout" from="Control/GameOver/LoseTimer" to="Control/GameOver" method="_on_Timer_timeout"]
